tests/typing/errors/shadow/builtin-term-const.expected
File "tests/typing/errors/shadow/builtin-term-const.smt2", line 2, character 0-26:
2 | (declare-fun true () Bool)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error Duplicate declaration of `true`, which is already defined by a builtin theory
